force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__CodeDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeDescription__c</fullName>
    <label>Code Description</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>