force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__CodeTypeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__CodeTypeText__c</fullName>
    <label>Code Type</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CodeTypeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>