force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EffectiveDate__c</fullName>
    <label>Effective Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EffectiveDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>