force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__EndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__EndDate__c</fullName>
    <label>EndDate</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>