force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__IsHospitalAcquiredCondition__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsHospitalAcquiredCondition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Hospital Acquired Condition</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsHospitalAcquiredCondition</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>