force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__IsMajorComplicationOrComorbidity__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMajorComplicationOrComorbidity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Major Complication Or Comorbidity</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMajorComplicationOrComorbidity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>