force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__IsPresentOnAdmissionExempt__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPresentOnAdmissionExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Present On Admission Exempt</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPresentOnAdmissionExempt</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>