force-app/main/default/objects/ssot__HealthcareDiagnosis__dlm/fields/ssot__IsUnacceptablePrincipalDxIpAdmit__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsUnacceptablePrincipalDxIpAdmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Unacceptable Principal DxIp Admit</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsUnacceptablePrincipalDxIpAdmit</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>